--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,9 @@ Nigel Thorne <http://github.com/NigelThorne>
 Rolf Timmermans <http://github.com/rolftimmermans>
 Jonas Elfström <http://github.com/jonelf>
 oupo <http://github.com/oupo>
+Daniel Zollinger <https://github.com/dznz>
+Ronen Barzel <https://github.com/ronen>
+Jamison Dance <https://github.com/jergason>
 
 Thanks to :
 
