--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ oupo <http://github.com/oupo>
 Daniel Zollinger <https://github.com/dznz>
 Ronen Barzel <https://github.com/ronen>
 Jamison Dance <https://github.com/jergason>
+hirochachacha <https://github.com/hirochachacha>
 
 Thanks to :
 
