Add GraphViz::Theory#dfs (Depth First Search)

--- a/README.rdoc
+++ b/README.rdoc
@@ -17,10 +17,11 @@ Interface to the GraphViz graphing tool
 == CHANGELOG
 
 === 1.0.3 :
-* Remove definition of Array#all?
+* Add Depth First Search algorithm (GraphViz::Theory#dfs)
 * Add GraphViz#add_edges (GraphViz#add_edge is deprecated)
 * Add GraphViz#add_nodes (GraphViz#add_node is deprecated)
 * Add GraphViz::generate 
+* Remove definition of Array#all?
 
 === 1.0.2 :
 * Add PageRank algorithm
