--- a/README.rdoc
+++ b/README.rdoc
@@ -259,11 +259,11 @@ A basic example
   g = GraphViz.new( :G, :type => :digraph )
 
   # Create two nodes
-  hello = g.add_node( "Hello" )
-  world = g.add_node( "World" )
+  hello = g.add_nodes( "Hello" )
+  world = g.add_nodes( "World" )
 
   # Create an edge between the two nodes
-  g.add_edge( hello, world )
+  g.add_edges( hello, world )
 
   # Generate output image
   g.output( :png => "hello_world.png" )
@@ -333,9 +333,9 @@ Ruby/GraphViz also includes :
     require 'graphviz'
     graph_g = GraphViz.digraph( "G" ) { |graph_g|
       graph_g[:bb] = '0,0,70,108'
-      node_hello = graph_g.add_node( "Hello", :height => '0.5', :label => '\N', :pos => '35,90', :width => '0.88889' )
-      graph_g.add_edge( "Hello", "World", :pos => 'e,35,36.413 35,71.831 35,64.131 35,54.974 35,46.417' )
-      node_world = graph_g.add_node( "World", :height => '0.5', :label => '\N', :pos => '35,18', :width => '0.97222' )
+      node_hello = graph_g.add_nodes( "Hello", :height => '0.5', :label => '\N', :pos => '35,90', :width => '0.88889' )
+      graph_g.add_edges( "Hello", "World", :pos => 'e,35,36.413 35,71.831 35,64.131 35,54.974 35,46.417' )
+      node_world = graph_g.add_nodes( "World", :height => '0.5', :label => '\N', :pos => '35,18', :width => '0.97222' )
     }
     puts graph_g.output( :canon => String )
 
