--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -5,6 +5,7 @@
 * GraphViz::GraphML#attributs is deprecated, please, use GraphViz::GraphML#attributes
 * GraphViz::Node#each_attribut is deprecated, please use GraphViz::Node#each_attribute
 * Major bug correction in GraphViz::Attrs and GraphViz::parse
+* An empty string means "false" for boolean attributes
 
 == 1.0.3 :
 * The GraphViz::Theory#moore_dijkstra return a path which contains GraphViz::Node instead of GraphViz::Node#id
