--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -2,6 +2,8 @@
 
 == 1.0.5 :
 * Change deprecated methods in gem2gv, git2gv and ruby2gv
+* Issue #38
+* Issue #39
 
 == 1.0.4 :
 * GraphViz::Edge#each_attribut is deprecated, please use GraphViz::Edge#each_attribute
