--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,6 +1,7 @@
 = CHANGELOG
 
 == 1.0.6 :
+* Add (experimental) support of LibXML/LibXSLT 
 
 == 1.0.5 :
 * Change deprecated methods in gem2gv, git2gv and ruby2gv
