Update AUTHORS and CHANGELOG

--- a/AUTHORS.rdoc
+++ b/AUTHORS.rdoc
@@ -16,9 +16,10 @@
 * Ronen Barzel <https://github.com/ronen>
 * Jamison Dance <https://github.com/jergason>
 * hirochachacha <https://github.com/hirochachacha>
-* coding64 (https://github.com/coding46)
-* Neven Has (https://github.com/nevenh)
-* Postmodern (https://github.com/postmodern) 
+* coding64 <https://github.com/coding46>
+* Neven Has <https://github.com/nevenh>
+* Postmodern <https://github.com/postmodern> 
+* markus1189 <https://github.com/markus1189>
 
 Thanks to :
 
