--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,6 +1,7 @@
 = CHANGELOG
 
 == 1.0.7 :
+* Issue #48 : add_graph fails when passed a GraphViz object
 * Issue #47 : Find executable (by markus1189)
 
 == 1.0.6 :
