--- a/AUTHORS.rdoc
+++ b/AUTHORS.rdoc
@@ -19,8 +19,11 @@
 * coding64 <https://github.com/coding46>
 * Neven Has <https://github.com/nevenh>
 * Postmodern <https://github.com/postmodern> 
-* markus1189 <https://github.com/markus1189>
 * Mike Fiedler <https://github.com/miketheman>
+* Kenichi Kamiya <https://github.com/kachick>
+* Gabe Kopley <https://github.com/gkop>
+* markus1189 <https://github.com/markus1189>
+* Praveen Arimbrathodiyil <https://github.com/pravi>
 
 Thanks to :
 
