--- a/AUTHORS.rdoc
+++ b/AUTHORS.rdoc
@@ -1,24 +1,24 @@
 * Gregoire Lejeune <glejeune.lejeune@free.fr>
 * Brandon Coleman <metrix1978@gmail.com>
-* Dave Burt <http://github.com/dburt>
+* Dave Burt <https://github.com/dburt>
 * Miguel Cabrera <http://mfcabrera.com>
-* obruening <http://github.com/obruening>
-* reactive <http://github.com/reactive>
+* obruening <https://github.com/obruening>
+* reactive <https://github.com/reactive>
 * Hugh Sasse <hgs@dmu.ac.uk>
-* axgle <http://github.com/axgle>
-* hipe <http://github.com/hipe>
-* Stefan Huber <http://github.com/MSNexploder>
-* Nigel Thorne <http://github.com/NigelThorne>
-* Rolf Timmermans <http://github.com/rolftimmermans>
-* Jonas Elfström <http://github.com/jonelf>
-* oupo <http://github.com/oupo>
+* axgle <https://github.com/axgle>
+* hipe <https://github.com/hipe>
+* Stefan Huber <https://github.com/MSNexploder>
+* Nigel Thorne <https://github.com/NigelThorne>
+* Rolf Timmermans <https://github.com/rolftimmermans>
+* Jonas Elfström <https://github.com/jonelf>
+* oupo <https://github.com/oupo>
 * Daniel Zollinger <https://github.com/dznz>
 * Ronen Barzel <https://github.com/ronen>
 * Jamison Dance <https://github.com/jergason>
 * hirochachacha <https://github.com/hirochachacha>
 * coding64 <https://github.com/coding46>
 * Neven Has <https://github.com/nevenh>
-* Postmodern <https://github.com/postmodern> 
+* Postmodern <https://github.com/postmodern>
 * Mike Fiedler <https://github.com/miketheman>
 * Kenichi Kamiya <https://github.com/kachick>
 * Gabe Kopley <https://github.com/gkop>
